# odisea-rent-a-car

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  env.example  environments.toml  eslint.config.js  index.html  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  vite.config.ts
.github/workflows/: node.yml
contracts/fungible-allowlist/: Cargo.toml
contracts/fungible-allowlist/src/: contract.rs  lib.rs  test.rs
contracts/guess-the-number/: Cargo.toml
contracts/guess-the-number/src/: error.rs  lib.rs  test.rs  xlm.rs
contracts/nft-enumerable/: Cargo.toml
contracts/nft-enumerable/src/: contract.rs  lib.rs  test.rs
contracts/rent-a-car/: Cargo.toml
contracts/rent-a-car/src/: contract.rs  lib.rs
contracts/rent-a-car/src/events/: admin.rs  car.rs  contract.rs  mod.rs  rental.rs  withdraw.rs
contracts/rent-a-car/src/interfaces/: contract.rs
contracts/rent-a-car/src/storage/: admin.rs  car.rs  mod.rs  owner.rs  rental.rs  token.rs
contracts/rent-a-car/src/tests/: add_car.rs  admin_fee.rs  aliases.rs  errors.rs  event_admin_fee.rs  events.rs  get_car_status.rs  initialize.rs  mod.rs  overflow_balances.rs  remove_car.rs  rental.rs  withdraw_flags.rs  withdrawals.rs
scripts/: deploy.ps1  e2e-test.ps1
src/: App.tsx  index.css  main.tsx
src/components/: CarList.tsx  ConnectAccount.tsx  CreateCarForm.tsx  FundAccountButton.tsx  GuessTheNumber.tsx  NetworkPill.tsx  WalletButton.tsx
src/components/layout/: Box.tsx
src/contracts/: util.ts
src/debug/components/: ContractForm.tsx  ErrorResponse.tsx  InvokeContractForm.tsx  JsonSchemaRenderer.tsx  MetadataCard.tsx  PrettyJson.tsx  PrettyJsonTextarea.tsx  PrettyJsonTransaction.tsx  RenderArrayType.tsx  RenderContractMetadata.tsx  RenderOneOf.tsx  RenderPrimitivesType.tsx  RenderTupleType.tsx  TransactionSuccessCard.tsx  TxResponse.tsx  ValidationResponseCard.tsx  XdrJsonViewer.tsx
src/debug/hooks/: useAccountSequenceNumber.ts  useCheckTxSignatures.ts  useContracts.ts  useRpcPrepareTx.ts  useSimulateTx.ts  useSubmitRpcTx.ts
src/debug/types/: types.ts
src/debug/util/: StellarXdr.ts  arrayItem.ts  dereferenceSchema.ts  fetchTxSignatures.ts  getNetworkHeaders.ts  getWasmContractData.ts  isEmptyObject.ts  jsonSchema.ts  loadContractMetada.ts  parseToLosslessJson.ts  prettifyJsonString.ts  sanitizeArray.ts  sanitizeObject.ts  sorobanUtils.ts  xdrFraction.ts  xdrUtils.ts
src/debug/validate/methods/: getArrayOfStringsError.ts  getAssetCodeError.ts  getAssetError.ts  getAssetMultiError.ts  getClaimaintsError.ts  getEventsFiltersError.ts  getMemoError.ts  (+9 more)
src/hooks/: useNotification.ts  useSubscription.ts  useWallet.ts  useWalletBalance.ts
src/interfaces/: car-status.ts  car.ts  contract.ts  create-car.ts  user-role.ts
src/lib/contract/: client.ts  types.ts
src/pages/: ConnectWallet.tsx  Dashboard.tsx  Debugger.tsx  Home.tsx  RoleSelection.tsx
src/providers/: NotificationProvider.css  NotificationProvider.tsx  StellarAccountProvider.tsx  WalletProvider.tsx
src/services/: stellar.service.ts  wallet.service.ts
src/util/: contract.ts  friendbot.ts  storage.ts  wallet.ts
src/utils/: constants.ts  shorten-address.ts  xlm-in-stroops.ts
(+12 files in other folders)
