[workspace]
members = ["contracts/*"]
resolver = "2"

[workspace.package]
authors = ["AhaLabs"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/theahaco/scaffold-stellar"
version = "0.0.1"

[workspace.dependencies.soroban-sdk]
version = "23.0.2"

[workspace.dependencies.stellar-access]
git = "https://github.com/OpenZeppelin/stellar-contracts"
tag = "v0.5.0"

[workspace.dependencies.stellar-default-impl-macro]
git = "https://github.com/OpenZeppelin/stellar-contracts"
tag = "v0.3.0"

[workspace.dependencies.stellar-fungible]
git = "https://github.com/OpenZeppelin/stellar-contracts"
tag = "v0.3.0"

[workspace.dependencies.stellar-macros]
git = "https://github.com/OpenZeppelin/stellar-contracts"
tag = "v0.5.0"

[workspace.dependencies.stellar-non-fungible]
git = "https://github.com/OpenZeppelin/stellar-contracts"
tag = "v0.3.0"

[workspace.dependencies.stellar-pausable]
git = "https://github.com/OpenZeppelin/stellar-contracts"
tag = "v0.3.0"

[workspace.dependencies.stellar-pausable-macros]
git = "https://github.com/OpenZeppelin/stellar-contracts"
tag = "v0.3.0"

[workspace.dependencies.stellar-tokens]
git = "https://github.com/OpenZeppelin/stellar-contracts"
tag = "v0.5.0"

[profile.release]
opt-level = "z"
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = true
strip = true

[profile.release-with-logs]
debug-assertions = true
inherits = "release"
